# taskmaster

./: Cargo.toml  README.md
configs/: config.yaml  invalid.yaml  test.yaml
src/: main.rs
src/libs/: socket.rs
src/taskmasterctl/: highlighter.rs  main.rs
src/taskmasterd/: main.rs
src/taskmastersocket/: mod.rs
