[package]
name = "taskmaster"
version = "0.1.0"
edition = "2021"

[lib]
name = "taskmastersocket"
path = "src/taskmastersocket/mod.rs"

[profile.release]
strip = true
opt-level = 3
lto = true

[[bin]]
name = "taskmasterctl"
path = "src/taskmasterctl/main.rs"

[[bin]]
name = "taskmasterd"
path = "src/taskmasterd/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yaml-rust = "0.4.5"
rustyline = "10.1.1"
syntect = "5.0.0"
daemonize = "0.4.1"
serde = { version = "1.0.152", features = ["derive"] }
bincode = "1.3.3"
libc = "0.2.139"